--- a/src/App.css
+++ b/src/App.css
@@ -354,10 +354,10 @@ h2 {
 
 .loader {
   border: 4px solid rgba(0, 0, 0, 0.3);
-  border-top: 4px solid #1809eb;
+  border-top: 4px solid #310abd;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   animation: spin 2s linear infinite;
 }
 
